sumo/tests/marouter/errors/incomplete_connections/from_missing1of2_allowed/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Tue Sep  3 15:47:52 2013 by SUMO marouter Version dev-SVN-r14553
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <taz-files value="input_taz.taz.xml"/>
        <od-matrix-files value="input_od_o.fma"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <processing>
        <ignore-errors value="true"/>
    </processing>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <routeDistribution id="2_1_0.00_86400.00">
        <route cost="0.00" probability="24.00000000" edges=""/>
    </routeDistribution>
</routes>
